Now you can clone rooms and sharing keeps photos and comments previously uploaded.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                 <input style="width: 50%" type="text" id="url">
                 <button onclick="createLink()">Create link for room</button><hr/>
 
+                <label for="url">Clone Room</label> <br>
+                <input style="width: 50%" type="text" id="url_clone">
+                <button onclick="cloneRoom()">Create link for room clone</button><hr/>
+
                 <label for="files">Upload an image:</label> <br>
                 <input type="file" id="files" name="files[]" /><hr/>
                 <br>
